force-app/main/default/objects/SiebelCommTracking__c/SiebelCommTracking__c.object-meta.xml
<CustomObject>
    <description>Oggetto per tracciare le comunicazioni presenti in siebel e migrate</description>
    <label>Comunicazione Migrate Siebel</label>
    <nameField>
        <displayFormat>SCT-{00000000}</displayFormat>
        <label>Comunicazione Migrate Siebel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comunicazioni Migrate Siebel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>