force-app/main/default/objects/SiebelCommTracking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comunicazioni Migrate Siebel</relationshipLabel>
    <relationshipName>Comunicazioni_Migrate_Siebel</relationshipName>
    <type>Lookup</type>
</CustomField>