force-app/main/default/objects/SiebelCommTracking__c/fields/CompanyOwner__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwner__c</fullName>
    <description>Identifica la company di appartenenza</description>
    <label>Company Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>