force-app/main/default/objects/SiebelCommTracking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contatto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comunicazioni Migrate Siebel</relationshipLabel>
    <relationshipName>Comunicazioni_Migrate_Siebel</relationshipName>
    <type>Lookup</type>
</CustomField>