force-app/main/default/objects/SiebelCommTracking__c/fields/IdNotifySiebelRequest__c.field-meta.xml
<CustomField>
    <fullName>IdNotifySiebelRequest__c</fullName>
    <label>Id Richiesta notifica Siebel</label>
    <length>15</length>
    <type>Text</type>
</CustomField>