force-app/main/default/objects/SiebelCommTracking__c/fields/PhoneMail__c.field-meta.xml
<CustomField>
    <fullName>PhoneMail__c</fullName>
    <description>Telefono/Email di recapito</description>
    <label>Recapito</label>
    <length>50</length>
    <type>Text</type>
</CustomField>