force-app/main/default/objects/SiebelCommTracking__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <description>Valorizzato da Marketing Cloud in base al tipo di notifica. Es: periodo autolettura, o una notifica di tracking.</description>
    <label>Regola Notifica</label>
    <length>100</length>
    <type>Text</type>
</CustomField>